# Commit-Assistant

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.commit-assistant/: .commit-assistant-config
.github/workflows/: CI_test.yml
src/commit_assistant/: __init__.py  cli.py
src/commit_assistant/commands/: __init__.py  commit.py  config.py  install.py  style.py  summary.py  update.py  upgrade.py
src/commit_assistant/core/: __init__.py  base_generator.py  paths.py  project_config.py  pyproject_config.py
src/commit_assistant/enums/: __init__.py  commit_style.py  config_key.py  default_value.py  exit_code.py  user_choices.py
src/commit_assistant/prompts/: .gitignore
src/commit_assistant/prompts/default/: angular.txt  conventional.txt  custom.txt  emoji.txt
src/commit_assistant/resources/config/: .commit-assistant-config  .commit-assistant-config.example
src/commit_assistant/resources/hooks/: prepare-commit-msg
src/commit_assistant/resources/styles/: style_template.yaml
src/commit_assistant/resources/styles/system/: angular.yaml  conventional.yaml  custom.yaml  emoji.yaml
src/commit_assistant/scripts/: __init__.py  build_pyproject.py
src/commit_assistant/utils/: __init__.py  command_runners.py  config_utils.py  console_utils.py  git_utils.py  hook_manager.py  installation_manager.py  style_utils.py  update_utils.py  upgrade_checker.py
tests/: test_base_generator.py  test_build_pyproject.py  test_cli.py  test_command_runners.py  test_commit_command.py  test_config_command.py  test_config_utils.py  test_git_utils.py  test_hook_manager.py  test_install_command.py  test_installation_manager.py  test_paths.py  test_project_config.py  test_pyproject_config.py  test_style_command.py  test_style_utils.py  test_summary_command.py  test_update_command.py  test_update_utils.py  test_upgrade_checker.py  test_upgrade_command.py
