[tool.setuptools.package-data]
commit_assistant = [
    "resources/**/*",
    "resources/hooks/*",
    "resources/config/*",
    "resources/config/.commit-assistant-config",
]

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "commit_assistant*",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "commit-assistant"
version = "0.1.2"
description = "Commit Assistant - 一個幫助你更好寫 commit message 的 CLI 工具"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=1.0.1",
    "google-generativeai>=0.8.4",
    "questionary>=2.1.0",
    "rich>=13.9.4",
    "pyperclip>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "tomli-w>=1.2.0",
]

[project.license]
text = "Apache-2.0"

[project.scripts]
commit-assistant = "commit_assistant.cli:cli"
