[tool.setuptools.package-data]
commit_assistant = [
    "resources/**/*",
    "resources/hooks/*",
    "resources/config/*",
    "resources/config/.commit-assistant-config",
    "resources/styles/**/*",
]

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "commit_assistant*",
]

[tool.pytest.ini_options]
addopts = "--cov=commit_assistant --cov-branch --cov-report=term-missing --cov-report=html --cov-report=xml -v"

[tool.coverage.run]
source = [
    "commit-assistant",
]
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING",
    "if __name__ == '__main__'",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "commit-assistant"
version = "0.1.6"
description = "Commit Assistant - 一個幫助你更好寫 commit message 的 CLI 工具"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=1.0.1",
    "google-generativeai>=0.8.4",
    "questionary>=2.1.0",
    "rich>=13.9.4",
    "pyperclip>=1.9.0",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "types-PyYAML>=6.0.12.20241230",
]

[project.license]
text = "Apache-2.0"

[project.scripts]
commit-assistant = "commit_assistant.cli:cli"
cmt-a = "commit_assistant.cli:cli"
